# course0

./: AGENTS.md  README.md  _config.yml  mdrender.html
.github/workflows/: static_ccc.yml
code/機器學習/: install.sh
code/機器學習/agent/A1-agent_in_docker/: agent0.md  agent0.py
code/機器學習/agent/_more/: mini-openclaw.md  mini-openclaw.py
code/機器學習/agent/v0-chat/: chat0.md  chat0.py
code/機器學習/agent/v1-mini-opencraw/: agent0.md  agent0.py
code/機器學習/agent/v2-agent-xml/: agent0.md  agent0.py
code/機器學習/agent/v3-agent-secure/: agent0.md  agent0.py  hello.md  hello.py  test_reviewer.md  test_reviewer.py
code/機器學習/agent/v4-agent-class/: agent0.md  agent0.py  test0.md  test0.py  test_reviewer.md  test_reviewer.py
code/機器學習/agent/v5-agent-team/: agent0.md  agent0.py  agent0team.md  agent0team.py  test0.md  test_reviewer.md  test_reviewer.py  test_team.md  test_team.py  test_team_case1.md  test_team_case1.py  test_team_case2.md  test_team_case2.py
code/機器學習/game/breakout/: run.md  run.py  train.md  train.py
code/機器學習/image/mnistDiffGen_fail/: generate.md  generate.py  train.md  train.py
code/機器學習/image/mnistGanGen/: generate.md  generate.py  train.md  train.py
code/機器學習/image/mnistRecognize/: classical.md  classical.py  (+8 more)
code/機器學習/music/: gen.sh  markov.txt  musicgen.md  musicgen.py  play.md  play.py  test.sh
code/程式與數學/_bak/geom4py/: README.md  pyproject.toml
code/程式與數學/_bak/geom4py/_doc/: prompt.md  v0.1.md
code/程式與數學/_bak/geom4py/examples/: basic_vectors.py  line_operations.py  plane_distance.py
code/程式與數學/_bak/geom4py/geom4py/: __init__.py  line.py  plane.py  point.py  vector.py
code/程式與數學/_bak/geom4py/tests/: __init__.py  test_line.py  test_plane.py  test_point.py  test_vector.py
code/程式與數學/_bak/stoc4py/: pyproject.toml
code/程式與數學/_bak/stoc4py/tests/: test_stoc4py.py
code/系統程式/: README.md
code/系統程式/database/fulltext0/: README.md  pyproject.toml
code/系統程式/database/fulltext0/src/: fulltext0.h  query.c
code/系統程式/database/fulltext0/src/fulltext0/: fulltext0.h
code/網站設計/05-form/: README.md
code/網站設計/10-rust/blog4rust/: Cargo.toml  run.sh  rustblog.db
code/網站設計/10-rust/blog4rust/_doc/: rustblog程式講解.md  rustblog錯誤修改紀錄.md  session_script.md
code/網站設計/10-rust/blog4rust/src/: main.rs
code/網站設計/11-fastapi/teapos/: SPEC.md  bubble_tea_pos.db  pyproject.toml
code/網站設計/11-fastapi/teapos/app/: crud.py  database.py  frontend.html  main.py  models.py  schemas.py
code/網站設計/11-fastapi/teapos/app/routers/: menu.py  orders.py  reports.py
code/軟體工程/: ccc_code_skill.md
code/軟體工程/agtw/: LICENSE  README.md  install.sh  publish.sh  pyproject.toml  run.sh
code/軟體工程/agtw/_doc/: design.md
code/軟體工程/agtw/agtw/: __init__.py  agents.py  cli.py  client.py  server.py  session.py
code/軟體工程/agtw/tests/: test_agents.py  test_client_server.py  test_session.py
code/軟體工程/fulltext0/: Makefile  README.md  example.py  pyproject.toml  query  setup.py
code/軟體工程/sqlite_cjk_fts/: README.md  cjk_tokenizer.c  example.py  mac_test.sh  pyproject.toml  test.sh  test_cjk.c  test_cjk.py
code/軟體工程/sqlite_cjk_fts/src/sqlite_cjk_fts/: __init__.py
docs/html/: index.html  main.css  main.html  main.js
docs/html/數學/: index.html  main.html  代數學.html  密碼學.html  幾何學.html  微積分.html  拓撲學.html  數論.html  機率統計.html  集合論.html
docs/html/機器學習/: Gym.html  K-近鄰.html  PyTorch.html  TensorFlow.html  Transformer.html  index.html  main.html  scikit-learn.html  主成分分析.html  分類演算法.html  卷積神經網路.html  反傳遞演算法.html  大型語言模型.html  強化學習.html  循環神經網路.html  損失函數.html  支持向量機.html  梯度下降法.html  模型評估.html  樸素貝葉斯.html  機器學習的歷史.html  正則化.html  決策樹.html  深度學習.html  生成對抗網路.html  異常偵測.html  監督式學習.html  神經網路.html  聚類演算法.html  自然語言處理.html  降維演算法.html  隨機森林.html  電腦視覺.html  非監督式學習.html
docs/html/演算法/: index.html  main.html  二元搜尋樹.html  分割擊破法.html  動態規劃.html  圖論.html  堆積.html  字串演算法.html  排序演算法.html  搜尋法.html  時間複雜度.html  最小生成樹.html  最短路徑.html  網路流.html  線性規劃.html  計算幾何.html  貪婪演算法.html  資料結構.html  近似演算法.html  隨機演算法.html  雜湊表.html
docs/html/系統程式/: C語言.html  Docker.html  HTTP.html  LLVM.html  QEMU.html  RISC-V.html  Rust.html  Socket網路介面.html  TCP-IP協定.html  index.html  main.html  xv6.html  作業系統.html  組合語言.html  編譯器.html  虛擬機.html  行程與執行緒.html  記憶體管理.html  高階語言.html
docs/html/網頁設計/: AJAX.html  CSS.html  DOM.html  FastAPI.html  HTML.html  JavaScript.html  Node.js.html  React.html  SQL.html  WebSocket.html  index.html  main.html  資料庫.html
docs/html/計算機結構/: alu.html  cache.html  cpu.html  cuda.html  digital-logic.html  gpu.html  history.html  index.html  isa.html  main.html  memory.html  nand2tetris.html  parallel.html  pipeline.html  superscalar.html  verilog.html  virtual-memory.html
docs/html/計算理論/: Lambda演算.html  NP完全性.html  Noam_Chomsky.html  index.html  main.html  函數式編程.html  圖靈機.html  形式文法.html  有限狀態機.html  自動機理論.html  計算理論.html  資訊理論.html
docs/html/軟體工程/: CI_CD.html  DevOps.html  Docker.html  Git.html  Prompt工程.html  index.html  main.html  單元測試.html  微服務架構.html  敏捷開發.html  版本控制.html  程式碼品質.html  設計模式.html  軟體架構.html  軟體生命週期.html  需求工程.html  領域驅動設計.html
docs/skill/: lecture_prompt.md
docs/wiki/: index.html
docs/wiki/數學/: index.html
docs/wiki/機器學習/: index.html
docs/wiki/演算法/: index.html
docs/wiki/系統程式/: index.md
docs/wiki/計算理論/: index.md  函數式編程.md  圖靈機.md
lecture/: README.md
lecture/機器學習/: README.md  tool.md
lecture/演算法/: README.md
lecture/程式與數學/: README.md
lecture/系統程式/: README.md
lecture/網站設計/: README.md
lecture/計算機結構/: README.md
lecture/計算理論/: README.md
lecture/軟體工程/: README.md
wiki/: index.md
wiki/程式與數學/: index.md  log.md
wiki/系統程式/: index.html  log.md
wiki/網頁設計/: index.html
wiki/計算機結構/: index.html
wiki/計算理論/: Lambda演算.md  NP完全性.md  Noam_Chomsky.md  index.html  log.md  形式文法.md  有限狀態機.md  自動機理論.md  計算理論.md  資訊理論.md
wiki/軟體工程/: index.html
(+420 files in other folders)
