[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agtw"
version = "0.2.2"
description = "Agent Team Work - A git-style multi-agent coordination system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CCC", email = "ccckmit@gmail.com"}
]
keywords = ["agent", "ai", "llm", "ollama", "harness-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.0",
    "websockets>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
agtw = "agtw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agtw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
