[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-cjk-fts"
version = "0.2.0"
description = "CJK Bigram Tokenizer for SQLite FTS5"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["sqlite", "fts5", "full-text-search", "cjk", "chinese", "japanese", "korean", "tokenizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/yourusername/sqlite-cjk-fts"
Documentation = "https://github.com/yourusername/sqlite-cjk-fts#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sqlite_cjk_fts = ["_lib/*.dylib", "_lib/*.so"]