[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geom4py"
version = "0.1.0"
description = "A lightweight 3D geometry library for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/你的用戶名/geom4py"
Repository = "https://github.com/你的用戶名/geom4py"

[tool.setuptools.packages.find]
where = ["."]
include = ["geom4py*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]