[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stoc4py"
version = "0.1.0"
description = "Stochastic calculus library for Python"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy>=1.20", "scipy"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["stoc4py*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]