[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fulltext0"
version = "0.2.0"
description = "A lightweight full-text search engine with CJK (Chinese/Japanese/Korean) support"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Chen Zhong-Cheng", email = "ccc@nqu.edu.tw"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["full-text", "search", "index", "cjk", "chinese", "jieba", "n-gram"]

[project.urls]
Homepage = "https://github.com/ccccourse0/fulltext0"
Repository = "https://github.com/ccccourse0/fulltext0"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fulltext0 = ["py.typed"]