[package]
name = "rustblog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = { version = "0.11", features = ["cookie-session"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
