[project]
name = "bubble-tea-pos"
version = "1.0.0"
description = "Bubble Tea Shop POS System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"